--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 		<div class="main-container">
 			<a href=""></a>
 			<h3 style="text-align: center;">Get In Touch</h3>
-			<div class="social socialleft">
+			<div class="social">
 				<a href="http://www.linkedin.com/in/jayant-rana-717318197">
 					<img src="./images/social-linkedin.png" alt="" />
 				</a>
